fix: -images stretching & text colors

--- a/app/components/landing/featuredProjectSection/FeatureProjectSlider.css
+++ b/app/components/landing/featuredProjectSection/FeatureProjectSlider.css
@@ -1,5 +1,5 @@
 .main-carousel .carousel {
-  height: 600px;
+  height: 710px;
 }
 
 .carousel .control-dots {
